syntax = "proto3"; // 指定proto版本

package test;


service ServiceB {
    rpc Call (Btest) returns (Btest) {
    }
}
message Btest {
    string name = 1;
}